fix top spacing

--- a/miniblog/public/stylesheets/blog.css
+++ b/miniblog/public/stylesheets/blog.css
@@ -1,3 +1,13 @@
-i.icon {
-    font-size: 2em;
+html {
+    margin-top: 60px;
 }
+
+i.icon {
+    font-size: 2.0em;
+};
+
+/* not working ?
+.container.segment {
+    margin-top: 7.0em;
+};
+*/
